--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
-service.key=Ddkej202k3kwkjwewlsoduiw
+service.key=1111111111111111111
 
 
-#spring.security.user.name=user
-#spring.security.user.password=useruser
+spring.security.user.name=user
+spring.security.user.password=pass
